<resources>
    <string name="app_name">Doc Portal</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="exp_someone_gmail_com">Exp: Someone@gmail.com</string>
    <string name="email_address">Email Address</string>
    <string name="phone_no">Phone No</string>
    <string name="_030xxxxxxxx">Exp: +92–311-0000000</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="exp_8_2_2001">EXP: 8.2.2001</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="home_address">Home Address</string>
    <string name="primary_address">Primary Address</string>
    <string name="residential_information">Residential Information</string>
    <string name="postal_address">Postal Address</string>
    <string name="postal_address_or_office_address">postal address or office address</string>
    <string name="postal_code">Postal Code</string>
    <string name="exp_14440">EXP: 14440</string>
    <string name="ssc_marks">SSC Marks</string>
    <string name="hssc_marks">HSSC Marks</string>
    <string name="medical_college">Medical College</string>
    <string name="gpa">GPA</string>
    <string name="exp_3_45_4_00">EXP: 3.45/4.00</string>
    <string name="license_requirements">License Requirements</string>
    <string name="license_no">License No</string>
    <string name="exp_24pk67er4589to">EXP: 24PK67ER4589TO</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="category">Category</string>
    <string name="certificate">Certificate</string>
    <string name="FirstNameError">First Name can\'t be empty!</string>
    <string name="LastNameError">Last Name can\'t be empty!</string>
    <string name="EmailAddressError">Email Address can\'t be empty!</string>
    <string name="PhoneError">Phone number can\'t be empty!</string>
    <string name="GenderError">Select at least one Gender!</string>
    <string name="AgeError">Select your Age!</string>
    <string name="DOBError">Date of Birth can\'t be empty</string>
    <string name="HouseError">Primary(Home) Address can\'t be empty</string>
    <string name="OfficeError">Secondary (Postal or any) can\'t be empty</string>
    <string name="PostalCodeError">Postal Code can\'t be empty</string>
    <string name="SSCError">SSC Marks can\'t be empty!</string>
    <string name="HSSCError">HSSC Marks can\'t be empty!</string>
    <string name="MedicalError">Select at least one!</string>
    <string name="GPAError">GPA can\'t be empty</string>
    <string name="LicenseError">License number can\'t be empty!</string>
    <string name="ExpireError">Expiry Date can\'t be empty!</string>
    <string name="SpecialCategoryError">Select at least one!</string>
    <string name="CertError">Insert Certificate(PDF) docs!</string>
    <string name="password">Password</string>
    <string name="type_your_password">type your password</string>
    <string name="Type_your_password" />
    <string name="create_it_unique">Having unique characters</string>
    <string name="passworderror">Password can\'t be empty</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="exp_61102_0000000_0">Exp: 61102-0000000-0</string>
    <string name="exp_house_no_st_sector_rwp">Exp : house no, st #, Sector, Rwp</string>
    <string name="approve">Approve</string>
    <string name="Deny" />
    <string name="user_phone">Enter your phone number</string>
    <string name="user_name">Enter your Name</string>
    <string name="user_date">Date</string>
    <string name="user_datee">Select Date</string>
    <string name="user_concerns">Specify the concerns you are facing</string>
    <string name="select_date">Select Date</string>
    <string name="title_activity_lab_test_maps">lab_test_maps</string>
    <string name="normal_map">normal_map</string>
    <string name="hybrid_map">hybrid_map</string>
    <string name="satellite_map">sattelite_map</string>
    <string name="terrain_map">terrain_map</string>
    <string name="title_activity_all_maps">allMaps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="dropped_pin">dropped_pin</string>
    <string name="msg_token_fmt">TokenCreated</string>
</resources>