<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/extra_white"
    android:contentDescription="@string/app_name"
    android:fillViewport="true"
    tools:ignore="HardcodedText"
    tools:context=".Doctor.Registeration">


    <TextView
        android:id="@+id/registerHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textAlignment="center"
        android:layout_marginTop="35dp"
        android:text="Create new account"
        android:textColor="@color/light_black"
        android:textSize="30sp" />





    <ScrollView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingTop="10sp"
                android:text="Full Name"
                android:textColor="@color/light_black"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/firstName"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_field"
                android:drawableEnd="@drawable/full_name_avatar"
                android:drawablePadding="5sp"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="Enter your full name"
                android:inputType="textPersonName"
                android:paddingEnd="7sp"
                android:textColor="@color/light_black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingTop="15dp"
                android:text="@string/email_address"
                android:textColor="@color/light_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_field"
                android:drawablePadding="5sp"
                android:drawableEnd="@drawable/person_email"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="Enter you Email Address"
                android:inputType="textEmailAddress"
                android:paddingEnd="7sp"
                android:textColor="@color/light_black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"
                tools:ignore="TextFields" />




            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingTop="15dp"
                android:text="@string/password"
                android:textColor="@color/light_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_field"
                android:drawablePadding="5sp"
                android:ems="10"
                android:drawableEnd="@drawable/person_password"
                android:fontFamily="@font/inter_medium"
                android:hint="Enter your Password"
                android:inputType="textPassword"
                android:paddingEnd="7sp"
                android:textColor="@color/light_black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingTop="15dp"
                android:text="@string/phone_no"
                android:textColor="@color/light_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phoneNo"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_field"
                android:drawablePadding="5sp"
                android:drawableEnd="@drawable/person_phone"
                android:ems="10"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="Enter your Phone Number"
                android:inputType="textPhonetic"
                android:paddingEnd="7sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"
                tools:ignore="TextFields" />


            <TextView
                android:id="@+id/Lic_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingTop="15dp"
                android:text="@string/license_no"
                android:textColor="@color/light_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/license"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_field"
                android:drawablePadding="5sp"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="Enter your license number"
                android:drawableEnd="@drawable/doctor_license"
                android:inputType="textPersonName"
                android:paddingEnd="7sp"
                android:textColor="@color/light_black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"
                tools:ignore="TextFields" />


            <TextView
                android:id="@+id/Cat_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:paddingTop="15dp"
                android:text="@string/category"
                android:textColor="@color/light_black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/specialistCategory"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner_field"
                android:drawablePadding="5sp"
                android:paddingEnd="7sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <Button
                android:id="@+id/Submit"
                android:layout_width="370dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/but"
                android:fontFamily="@font/inter_medium"
                android:text="Sign up"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/loginheading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:paddingTop="15dp"
                    android:text="Already have an account."
                    android:textColor="@color/light_black"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:paddingTop="15dp"
                    android:text="Sign In"
                    android:paddingLeft="5dp"
                    android:textColor="@color/purple_blue"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>



